# icon-creator-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  preset_proposal.md
.github/workflows/: ci.yml
docs/: architecture.md  decisions.md  gallery.md  getting-started.md  install.md  marketplace.md  opencode.md  recipes.md  risks.md  troubleshooting.md  vision.md
docs/examples/: README.md
docs/phases/: README.md  phase-00-acceptance.md  phase-00-preflight-acceptance.md  phase-00-preflight.md  phase-00-skeleton.md  phase-01-acceptance.md  phase-01-icon-creator-v0.1.md  phase-02-acceptance.md  phase-02-icon-creator-v0.2.md  phase-03-acceptance.md  phase-03-icon-creator-v0.3.md  phase-04-acceptance.md  phase-04-app-icon-pack-v1.0.md  phase-05-acceptance.md  phase-05-app-icon-pack-v1.1.md  phase-06-acceptance.md  phase-06-png-to-svg-v0.1.md  phase-07-acceptance.md  phase-07-png-to-svg-v0.2.md  phase-08-acceptance.md  phase-08-mascot-creator-v0.1.md  phase-09-acceptance.md  phase-09-mascot-creator-v0.2.md  phase-10-acceptance.md  phase-10-mascot-creator-v0.3.md  phase-11-acceptance.md  phase-11-mascot-creator-v0.4.md  (+15 more)
shared/: __init__.py  cli.py  config.py  consistency_checker.py  cost.py  errors.py  google_client.py  image_clients.py  image_utils.py  logging_setup.py  openai_client.py  openrouter_client.py  prompt_builder.py  quality_validator.py  security.py  smoke_test.py  style_memory.py  vision_analyzer.py
(+202 files in other folders)
